# sherpa-onnx

./: BUILD-MOBILE.md  CMakeLists.txt  build-android-arm64-v8a.sh  build-android-armv7-eabi.sh  build-ios.sh
sherpa-onnx/c-api/: c-api.cc  cxx-api.cc
sherpa-onnx/csrc/: CMakeLists.txt  file-utils.cc  macros.h
sherpa-onnx/jni/: CMakeLists.txt
